--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "scripts": {
     "lint": "eslint tests/**/*.js tests/*.js src/**/*.js src/*.js --color --global requirejs --global require",
     "lint-fix": "eslint tests/**/*.js tests/*.js src/**/*.js src/*.js --color --global requirejs --global require --fix",
-    "test": "jest --runInBand",
-    "test-drone": "jest --runInBand",
+    "test-consumer": "jest --runInBand --testPathIgnorePatterns='provider.*'",
+    "test-provider": "jest --runInBand providerTest.js",
     "build:docs": "jsdoc -c jsdoc.conf.json",
     "build:system": "webpack"
   },
@@ -43,7 +43,7 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/runtime": "^7.4.4",
-    "@pact-foundation/pact": "beta",
+    "@pact-foundation/pact": "10.0.0-beta.25",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
